--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>
                     <a href="#" class="menu" id="link-paciente">
                         <div class="div-navlinks">
-                            <img class="img-menu" src="images/paciente-icon.png" alt="">
+                            <img class="img-menu" src="images/mask-icon24.png" alt="">
                             <span>Pacientes</span>
                         </div>
                     </a>
@@ -31,7 +31,7 @@
                 <li>
                     <a href="#agenda" class="menu" id="link-agenda">
                         <div class="div-navlinks">
-                            <img class="img-menu" src="images/agenda-icon.png" alt="">
+                            <img class="img-menu" src="images/clock-icon2.png" alt="">
                             <span>Agenda</span>
                         </div>
                     </a>
