julio 08 2021 FULL OK

--- a/dashboard.html
+++ b/dashboard.html
@@ -116,6 +116,9 @@
           </div>
         </div>
       </div>
+      <div class="agenda">
+
+      </div>
 
       <!--2 cards bottom-->
       <div class="dash-card detail">
@@ -128,12 +131,12 @@
           <thead>
             <tr>
               <th id="th-id-hidden">id</th>
-              <th>Genero</th>
+              <th><img src='images/mask-icon16.png' /></th>
               <th>Nombre</th>
               <th>Apellido</th>
               <th>Edad</th>
               <th>Telefono</th>
-              <th>Acciones</th>
+              <th>Control</th>
             </tr>
           </thead>
           <tbody id="dash-pacientes-tbody">
@@ -145,8 +148,8 @@
       <div class="dash-card customer">
         <h2>Citas Pendientes</h2>
       </div>
-      
-    </div>    
+
+    </div>
   </main>
   <div class="foot">
     <p> powered by&copy;Reactor-Sistemas v20jun21-03:00pm</p>
