--- a/index.html
+++ b/index.html
@@ -118,9 +118,16 @@
 
     <section class="timeline" id="myTimeline">
         <div class="intro" id="myIntro">
+           
             <div class="intro-header">
                 <h1>Agenda Pendiente &darr;</h1>
             </div>
+            <div class="horario" id="div-horario">
+                <ol id="listaHoras">
+                   <li>HOY:</li>
+                </ol>
+            </div>
+           
         </div>
         <ul id="ul-timeline">
         </ul>
