--- a/crearpaciente.html
+++ b/crearpaciente.html
@@ -5,16 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/formulario1.css">
-  <title>Paciente Nuevo</title>
+  <title>Paciente Nuevo - Historia</title>
 </head>
 
 <body>
   <span id="span-pestana">Nuevo</span>
-  <button class="volver"><a href="index.html">volver</a> </button>
+  <button class="volver"><a href="#" onclick="close_window();return false;">volver</a> </button>
   <div class="testbox">
 
     <form id="historia-form" autocomplete="off">
@@ -288,7 +287,7 @@
       </div>
       <br />
 
-      
+
       <div id="div-control-asistencia">
         <h5>Control de Asistencia (1ra. consulta)</h5>
         <div class="item">
@@ -341,7 +340,7 @@
           </div>
         </div>
 
-        
+
       </div>
       <br />
 
